@@ -44,6 +44,8 @@
 #define APR_USE_PROC_PTHREAD_SERIALIZE    @procpthreadser@ 
 #define APR_USE_PTHREAD_SERIALIZE         @pthreadser@ 
 
+#define APR_PROCESS_LOCK_IS_GLOBAL        @proclockglobal@
+
 #define APR_USES_ANONYMOUS_SHM            @anonymous_shm@
 #define APR_USES_FILEBASED_SHM            @filebased_shm@
 #define APR_USES_KEYBASED_SHM             @keybased_shm@
